src/test/deca/syntax/parser/valid/testing_null.deca
// testing if null is parsed

{
    int x;
    if (x == null) {
        print("x is null");
    }
}