src/test/deca/syntax/parser/invalid/decl_two_var_missing_semicolon.deca
// Missing ";"

{
    int x int y;
}